--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -14,7 +14,7 @@
         <ul class="posts">
             {% for post in posts %}
                 <li class="post">
-                    <div>{{ post.title }}</div>
+                    <div><a href="/posts/{{ post.id }}/">{{ post.title }}</a></div>
                     <p>{{ post.content }}</p>
                     <ul class="comments">
                         {% for comment in post.comment_set.all %}
